# clew-proxy

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  sonar-project.properties  udp_session_research_v2.py
assets/: _make_ico.py  clew.rc
docs/: ARCHITECTURE.md  CODE_QUALITY.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md
docs/history/: E2E_PLAYWRIGHT_PHASE0.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts  notify.ts  sse.ts  types.ts
frontend/src/components/: AutoRules.vue  ConfigEditor.vue  NetworkActivities.vue  ProcessContextHeader.vue  ProcessTree.vue  ProcessTreeNode.vue  ProxiesTab.vue  RuleEditorDialog.vue  TagInput.vue
frontend/src/components/ui/label/: Label.vue
frontend/src/composables/: useDocumentVisibility.ts  useStatusBus.ts  useTheme.ts
frontend/src/types/: monaco-deep.d.ts
scripts/: release.py  verify.sh
src/: app.cpp  app.hpp  main.cpp
src/api/: http_api_server.cpp  http_api_server.hpp  icon_cache.hpp
src/auth/: auth_middleware.cpp  auth_middleware.hpp
src/common/: api_context.hpp  api_exception.cpp  api_exception.hpp  debug_console_session.hpp  json_patch.hpp  process_tree_json.hpp  single_instance_guard.hpp  winsock_session.hpp
src/config/: config_change_tag.hpp  config_manager.hpp  config_store.cpp  config_store.hpp  types.hpp
src/core/: dns_forwarder.hpp  dns_manager.hpp  exe_paths.hpp  log.hpp  port_tracker.hpp  scoped_exit.hpp  string_hash.hpp  system_dns.hpp  windivert_network.hpp  windivert_socket.hpp
src/domain/: process_tree_manager.cpp  process_tree_manager.hpp  strand_bound.hpp  tree_change_receiver.hpp
src/process/: etw_consumer.hpp  flat_tree.hpp  ntquery_snapshot.hpp  process_tree_manager.hpp  tcp_table.hpp  udp_table.hpp
src/projection/: config_sse_bridge.cpp  config_sse_bridge.hpp  process_projection.cpp  process_projection.hpp
src/proxy/: acceptor.hpp  relay.hpp  socks5_async.hpp
src/rules/: rule_engine_v3.hpp  traffic_filter.hpp
src/services/: auth_service.cpp  auth_service.hpp  autostart_service.cpp  autostart_service.hpp  config_service.cpp  config_service.hpp  connection_service.cpp  connection_service.hpp  group_service.cpp  group_service.hpp  icon_service.cpp  icon_service.hpp  process_tree_service.cpp  process_tree_service.hpp  rule_service.cpp  rule_service.hpp  shell_service.cpp  shell_service.hpp  stats_service.cpp  stats_service.hpp
src/stats/: connection_stats.hpp
src/transport/: frontend_push_sink.hpp  http_api_server.cpp  http_api_server.hpp  middleware.cpp  middleware.hpp  response_utils.cpp  response_utils.hpp  route_def.hpp  route_registry.cpp  route_registry.hpp  sse_events.hpp  sse_hub.cpp  sse_hub.hpp
src/transport/handlers/: auth_handlers.cpp  autostart_handlers.cpp  config_handlers.cpp  connection_handlers.cpp  group_handlers.cpp  icon_handlers.cpp  process_handlers.cpp  rule_handlers.cpp  shell_handlers.cpp  sse_handlers.cpp  stats_handlers.cpp
src/udp/: socks5_udp_codec.hpp  socks5_udp_manager.hpp  socks5_udp_session.hpp  udp_port_tracker.hpp  udp_relay.hpp  udp_session_table.hpp  windivert_network_udp.hpp  windivert_socket_udp.hpp
src/ui/: webview_app.hpp
tests/: e2e_api_test.py  run_all.py  stress_backend.py  stress_etw.py  test_components.cpp
tests/playwright_e2e/: poc_attach.py  run_pw.py
